--- a/notebooks/Cleanup_total_unemployment.ipynb
+++ b/notebooks/Cleanup_total_unemployment.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Cleanup total unemployment rate\n",
-    "The table currently contains extra information we are not interested in. At the end we ouput a cleaned file"
+    "The table currently contains extra information we are not interested in. At the end we ouput a cleaned file."
    ]
   },
   {
@@ -602,8 +602,10 @@
     }
    ],
    "source": [
-    "# Finally we change the columns for rows\n",
+    "# Transpose\n",
     "df = df.T\n",
+    "\n",
+    "# Change columns for rows\n",
     "df.columns.name = \"\"\n",
     "df.head()"
    ]
