--- a/notebooks/Convert_tsv_to_pkl.ipynb
+++ b/notebooks/Convert_tsv_to_pkl.ipynb
@@ -17,7 +17,9 @@
     "import os\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "BASE = os.path.join(os.pardir, \"data\")\n"
    ]
   },
   {
@@ -26,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE = os.path.join(os.pardir, \"data\")\n",
+    "# Functions\n",
     "\n",
     "def list_tsv():\n",
     "    \"\"\"Return list of tsv files\"\"\"\n",
@@ -80,6 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Main function\n",
+    "\n",
     "def clean_df(filename, replace=True):\n",
     "    \"\"\"Take filename, create & clean df and save as pickel.\"\"\"\n",
     "    \n",
@@ -89,15 +93,17 @@
     "        and os.path.exists(os.path.join(BASE, \"pickles\", f\"{newname}.pkl\"))):\n",
     "        return f\"{filename} skipped\"\n",
     "    \n",
+    "    # Open file\n",
     "    df = pd.read_csv(os.path.join(BASE, \"tsv\", filename), sep=\"\\t\")\n",
     "    \n",
-    "    # Set : values to pd.NA and rest to numeric\n",
+    "    # Set ':' values to pd.NA and rest to numeric\n",
     "    for col in df.columns[1:]:\n",
     "        df[col] = simplify_col(df[col])\n",
     "    \n",
     "    # Convert variables in first column to seperate columns\n",
     "    df = split_first_col(df) \n",
     "    \n",
+    "    # Save files\n",
     "    df.to_pickle(os.path.join(BASE, \"pickles\", f\"{newname}.pkl\"))\n",
     "    df.to_csv(os.path.join(BASE, \"pickles\", f\"{newname}.csv\"))\n",
     "    \n",
@@ -175,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
