--- a/notebooks/cleanup_GDP_data.ipynb
+++ b/notebooks/cleanup_GDP_data.ipynb
@@ -246,6 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Change the table to have countries as columns, years as rows\n",
     "df = df.pivot(index=\"time\", columns=\"geo\", values=\"value\")"
    ]
   },
@@ -255,6 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Drop index names\n",
     "df.columns.name = \"\"\n",
     "df.index.name = \"\""
    ]
@@ -351,6 +353,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize in graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -379,13 +388,17 @@
     }
    ],
    "source": [
+    "# Set variables\n",
     "colors = [\"orange\", \"blue\", \"red\"]\n",
     "names = {0: \"Germany\", 1: \"Greece\", 2: \"EU 28\"}\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15,6))\n",
     "\n",
+    "# Do the plot\n",
     "for i, country in enumerate(df.columns):\n",
     "    ax.plot(country, data=df, label=names[i], color=colors[i])\n",
+    "\n",
+    "# Set labels\n",
     "ax.set_title(\"Gross domestic product\")\n",
     "ax.set_xlabel(\"Year\")\n",
     "ax.set_ylabel(\"USD per capita\")\n",
