--- a/notebooks/correlation_check_with_GDP.ipynb
+++ b/notebooks/correlation_check_with_GDP.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Correlation unemployment / GDP\n",
-    "BASE = os.path.join(os.pardir, \"data\")We want to know if there is a correlation between the GDP per capita and the unemployment rate."
+    "We want to know if there is a correlation between the GDP per capita and the unemployment rate."
    ]
   },
   {
@@ -209,8 +209,7 @@
    "source": [
     "# Keep only the countries we're interested in\n",
     "countries = [\"DE\", \"EL\", \"EU28\"]\n",
-    "drop = [_ for _ in uep.columns \n",
-    "        if _ not in countries]\n",
+    "drop = [_ for _ in uep.columns if _ not in countries]\n",
     "uep.drop(columns=drop, inplace=True)\n",
     "uep.head()"
    ]
@@ -344,7 +343,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Check correlation"
+    "## Check correlation\n",
+    "For all three regions we run a check how strong the correlation coefficient is. "
    ]
   },
   {
@@ -457,10 +457,19 @@
    "source": [
     "for c in countries:\n",
     "    print(f\"+++++++++++++++++++{c}+++++++++++++++++++\")\n",
+    "    \n",
     "    y = combi[f\"u_{c}\"]\n",
     "    X = combi[[\"const\", f\"g_{c}\"]]\n",
     "    model = sm.OLS(y, X).fit()\n",
+    "    \n",
     "    print(model.summary(), end=\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make a graphical comparison"
    ]
   },
   {
@@ -521,7 +530,7 @@
    "metadata": {},
    "source": [
     "## Conclusions\n",
-    "The Pearson coefficient for Germany, Greece and the combined EU28 differ greatly (resp 0.948, 0.420, 0.288). Looking at the graph it can be easily seen that the unemployment in Germany is rougly inverse to the GDP. However, in the case of Greece the impact of the declining economy was far greater. Looking at the combined EU28, there is probably a dampening effect (between the northern and southern countries). The massive increase in unemployment was not halted by the already increasing GDP in northern Europe. "
+    "The Pearson coefficient for Germany, Greece and the combined EU28 differ greatly (resp 0.948, 0.420, 0.288). Looking at the graph it can be easily seen that the unemployment in Germany is roughly inverse to the GDP. However, in the case of Greece the impact of the declining economy was far greater. Looking at the combined EU28, there is probably a dampening effect (between the northern and southern countries). The massive increase in unemployment was not halted by the already increasing GDP in northern Europe. "
    ]
   },
   {
