--- a/notebooks/education_combined_data.ipynb
+++ b/notebooks/education_combined_data.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Comparison between the EU28, Germany and Greece\n",
-    "Now compare all 3 education levels of the EU28 countries, Germany and Greece"
+    "Compare all 3 education levels of the EU28 countries, Germany and Greece"
    ]
   },
   {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "2009   55.7   74.1   86.3      44.3         25.9       13.7"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,12 +167,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because we discovered the data isn't useable for the unemployment case, we create another combination dataframe so we can compare employment data."
+    "### Dataset problems\n",
+    "Because we discovered the data isn't useable for the unemployment case, we created another combination dataframe so we can compare employment data.\n",
+    "\n",
+    "- emp_combi = **em**ployment data\n",
+    "- combi = **unem**ployment data\n",
+    "\n",
+    "Further explanation and the second combination dataset is found below under 'deprecated'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +294,7 @@
        "2009        59.8        62.4         81.5  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,6 +302,7 @@
    "source": [
     "# Dataframes for unemployment \n",
     "dfs = [df_eu28, df_germany, df_greece]\n",
+    "\n",
     "# Dataframes for employment \n",
     "empl = [df.copy() for df in dfs]\n",
     "countries = [\"eu28\", \"germany\", \"greece\"]\n",
@@ -315,6 +322,117 @@
     "emp_combi = pd.concat(empl, axis=1)\n",
     "emp_combi.index = emp_combi.index.astype(int)\n",
     "emp_combi.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "low_eu28        52.1\n",
+       "med_eu28        69.6\n",
+       "high_eu28       81.9\n",
+       "low_germany     57.8\n",
+       "med_germany     76.8\n",
+       "high_germany    87.7\n",
+       "low_greece      48.0\n",
+       "med_greece      51.4\n",
+       "high_greece     70.3\n",
+       "Name: 2012, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emp_combi.loc[2012]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export\n",
+    "filename = os.path.join(BASE, \n",
+    "                        \"output\",\n",
+    "                        \"education_employment_rate_de_el_eu28\")\n",
+    "emp_combi.to_pickle(f\"{filename}.pkl\")\n",
+    "emp_combi.to_csv(f\"{filename}.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make graphs in Tableau we need the data in another form. We use data for 2012."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = 2012\n",
+    "\n",
+    "trans = []\n",
+    "for i in range(9):\n",
+    "    # Make a row every for every 3 columns\n",
+    "    if i % 3:\n",
+    "        continue\n",
+    "        \n",
+    "    trans.append([countries[i // 3]] + list(emp_combi.loc[year][i: i + 3]))\n",
+    "\n",
+    "# New column names\n",
+    "cols = [\"geo\", \"low\", \"med\", \"hi\"]\n",
+    "\n",
+    "t_df = pd.DataFrame(trans, columns=cols).set_index(\"geo\")\n",
+    "\n",
+    "# Transpose these values \n",
+    "t_df = t_df.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the label of 'columns'\n",
+    "t_df.columns.name = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the file to CSV\n",
+    "t_df.to_csv(os.path.join(BASE, \n",
+    "                         \"output\",\n",
+    "                         \"edu_emp_2012.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deprecated code\n",
+    "We discovered that we misinterpreted the data on education levels. There are three problems:\n",
+    "- The data is regarding employment, not unemployment\n",
+    "- The data is cumulative (If you have high level, you have also had low and medium schooling)\n",
+    "- The number is the rate of people employed vs total population. \n",
+    "\n",
+    "These three problems mean we cannot take the remainder of '100 - employed' as 'unemployed'. We changed our code so we couuld export some information and make a stacked bar plot in Tableau, however the code below is no longer used. "
    ]
   },
   {
@@ -462,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +589,7 @@
        "Text(0.06, 0.5, 'Note')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -487,9 +605,6 @@
     }
    ],
    "source": [
-    "# Switch between employment / unemployment mode\n",
-    "mode = combi\n",
-    "\n",
     "# Initialize the figure\n",
     "plt.style.use(\"seaborn-darkgrid\")\n",
     " \n",
@@ -499,10 +614,10 @@
     "# multiple line plot\n",
     "fig, axes = plt.subplots(3,3, figsize=(17,8))\n",
     "\n",
-    "for num, column in enumerate(mode):\n",
+    "for num, column in enumerate(emp_combi):\n",
     " \n",
     "    # Plot the lineplot\n",
-    "    axes.flatten()[num].plot(mode[column], \n",
+    "    axes.flatten()[num].plot(emp_combi[column], \n",
     "                             marker='', \n",
     "                             color=palette[num // 3], \n",
     "                             linewidth=1.9, \n",
@@ -549,102 +664,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "low_eu28        52.1\n",
-       "med_eu28        69.6\n",
-       "high_eu28       81.9\n",
-       "low_germany     57.8\n",
-       "med_germany     76.8\n",
-       "high_germany    87.7\n",
-       "low_greece      48.0\n",
-       "med_greece      51.4\n",
-       "high_greece     70.3\n",
-       "Name: 2012, dtype: float64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "emp_combi.loc[2012]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Export\n",
-    "filename = os.path.join(BASE, \n",
-    "                        \"output\",\n",
-    "                        \"education_unemployment_rate_de_el_eu28\")\n",
-    "mode.to_pickle(f\"{filename}.pkl\")\n",
-    "mode.to_csv(f\"{filename}.csv\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make graphs in Tableau we need the data in another form. We look at 2012."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year = 2012\n",
-    "\n",
-    "trans = []\n",
-    "for i in range(9):\n",
-    "    if i % 3:\n",
-    "        continue\n",
-    "    trans.append([countries[i // 3]] + list(emp_combi.loc[year][i: i + 3]))\n",
-    "cols = [\"geo\", \"low\", \"med\", \"hi\"]\n",
-    "\n",
-    "t_df = pd.DataFrame(trans, columns=cols).set_index(\"geo\")\n",
-    "t_df = t_df.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_df.columns.name = \"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Export the file to CSV\n",
-    "t_df.to_csv(os.path.join(BASE, \n",
-    "                         \"output\",\n",
-    "                         \"edu_emp_2012.csv\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ---Below not used---\n",
-    "The code below was to calculate a relative rate for each level. However then we discovered the rates are cumative and referring to the total population. "
+    "#### Relative rates\n",
+    "The code below was to calculate a relative rate for each level. However then we discovered the rates are cumative and referring to the total population iso active population. "
    ]
   },
   {
@@ -670,6 +694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Take one year\n",
     "rel_rate = combi.loc[2012]"
    ]
   },
@@ -679,6 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Combine edu data with total unemployment data\n",
     "rel_rate = pd.concat([rel_rate, total])"
    ]
   },
@@ -716,6 +742,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate relative rates\n",
+    "After this prework we can loop over the 3 regions to calculate the relative rates."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
@@ -729,14 +763,25 @@
     }
    ],
    "source": [
+    "\n",
     "rel_edu = []\n",
     "i = 0\n",
+    "\n",
     "for country in countries:\n",
+    "    # For every country save a list with relative rates\n",
     "    rel_edu.append({country: [round(rel_rate.iloc[i+x] / \n",
     "                              rel_rate[count_codes[x]], 2) \n",
     "                              for x in range(3)]})\n",
     "    i += 3\n",
     "print(rel_edu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Findings\n",
+    "Looking at the relative rates, we can conclude they make no sense. We discard these findings and rework the original dataset."
    ]
   },
   {
