--- a/notebooks/education_employment_rate_EU28.ipynb
+++ b/notebooks/education_employment_rate_EU28.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Unemployment by gender in EU28\n",
-    "Same process as for Germany, however now done for Greece to be able to compare both countries"
+    "Same process as for Germany, however now done for Greece to be able to compare both countries.\n",
+    "\n",
+    "## note!\n",
+    "After some time we realized our work was not valid. We only updated 'education_combined_data.ipynb'."
    ]
   },
   {
