--- a/notebooks/sex_country_analysis.ipynb
+++ b/notebooks/sex_country_analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analyze influence of gender\n",
+    "In this notebook we investigate what the correlation is between the difference in gender, on the rate of unemployment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -14,7 +22,7 @@
     "import seaborn as sns\n",
     "%matplotlib inline\n",
     "\n",
-    "BASE = os.path.join(os.pardir, \"data\")"
+    "BASE = os.path.join(os.pardir, \"data\", \"output\")"
    ]
   },
   {
@@ -23,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(\"../data/output/filtered_sex_country.pkl\")\n",
+    "# Import file\n",
+    "df = pd.read_pickle(os.path.join(BASE, \"filtered_sex_country.pkl\")\n",
     "df_t = df.copy()"
    ]
   },
@@ -409,7 +418,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transpose data for Tableau"
+    "## Transpose data for Tableau\n",
+    "To be better able to make a stacked bar graph in Tableau, we need to transpose the data."
    ]
   },
   {
