--- a/notebooks/sex_filter.ipynb
+++ b/notebooks/sex_filter.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Filter for sex per country"
+    "# Filter for sex per country\n",
+    "To be able to do analysis on the impact of gender, we first need to filter the general unemployment data."
    ]
   },
   {
@@ -218,6 +219,7 @@
    "source": [
     "# Save the parameters in case we need to reference\n",
     "params = df.iloc[0][0:4]\n",
+    "\n",
     "# Check how what unique values\n",
     "df[\"sex\"].unique()"
    ]
@@ -582,7 +584,10 @@
    "metadata": {},
    "source": [
     "## Absolute numbers\n",
-    "To get fractions we need to work with absolute numbers. We repeat the process for a different table and then calculate the fractions."
+    "To get fractions we need to work with absolute numbers. We repeat the process for a different table and then calculate the fractions.\n",
+    "\n",
+    "### Note\n",
+    "Later we realized that it's not valid to make this calculation."
    ]
   },
   {
@@ -739,11 +744,13 @@
     }
    ],
    "source": [
-    "# Open file\n",
+    "# Open the file with absolute numbers\n",
     "filename = \"teilm010.pkl\"\n",
     "abs_df = pd.read_pickle(os.path.join(BASE, \n",
     "                                     \"pickles\", \n",
     "                                     filename))\n",
+    "\n",
+    "# Drop unnecessary columns\n",
     "abs_df = abs_df.drop(columns=[\"s_adj\", \"age\", \"unit\"])\n",
     "abs_df.head()"
    ]
@@ -1083,7 +1090,11 @@
     }
    ],
    "source": [
+    "# Use the mean of all years\n",
     "abs_df[\"mean\"] = abs_df[abs_df.columns[2:]].mean(axis=1)\n",
+    "\n",
+    "# Pivot table to have countries on rows and gender as \n",
+    "# columns. Values are the mean calculated above\n",
     "abs_df = (abs_df\n",
     "         .drop(columns=df.columns[2:-1])\n",
     "         .pivot(index=\"geo\", columns=\"sex\", values=\"mean\")\n",
@@ -1612,7 +1623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
