--- a/notebooks/top10_countries_unemployment.ipynb
+++ b/notebooks/top10_countries_unemployment.ipynb
@@ -198,7 +198,8 @@
    ],
    "source": [
     "# Call up dataset of age group 15 to 24\n",
-    "teilm021 = pd.read_csv('../data/pickles/teilm021.csv', index_col = 0)\n",
+    "teilm021 = pd.read_csv('../data/pickles/teilm021.csv', \n",
+    "                       index_col = 0)\n",
     "teilm021.head()"
    ]
   },
@@ -375,7 +376,8 @@
    ],
    "source": [
     "# Call up dataset of age group 25 to 74\n",
-    "teilm022 = pd.read_csv('../data/pickles/teilm022.csv', index_col = 0)\n",
+    "teilm022 = pd.read_csv('../data/pickles/teilm022.csv', \n",
+    "                       index_col = 0)\n",
     "teilm022.head()"
    ]
   },
@@ -566,7 +568,8 @@
    ],
    "source": [
     "# Concatenating datasets of two age groups\n",
-    "teilm021_022_concat = pd.concat([teilm021, teilm022], axis = 0)\n",
+    "teilm021_022_concat = pd.concat([teilm021, teilm022], \n",
+    "                                axis = 0)\n",
     "teilm021_022_concat.head()"
    ]
   },
@@ -672,8 +675,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = ['2019m09', '2019m10', '2019m11', '2019m12', '2020m01', '2020m02', '2020m03', '2020m04', '2020m05', '2020m06', '2020m07', '2020m08']\n",
-    "teilm021_022_concat['mean'] = teilm021_022_concat[cols].mean(axis=1)"
+    "cols = ['2019m09', '2019m10', '2019m11', '2019m12', \n",
+    "        '2020m01', '2020m02', '2020m03', '2020m04', \n",
+    "        '2020m05', '2020m06', '2020m07', '2020m08']\n",
+    "teilm021_022_concat['mean'] = (teilm021_022_concat[cols]\n",
+    "                               .mean(axis=1))"
    ]
   },
   {
@@ -706,7 +712,9 @@
     }
    ],
    "source": [
-    "teilm021_022_concat['mean'].value_counts().sort_values(ascending = False)"
+    "(teilm021_022_concat['mean']\n",
+    " .value_counts()\n",
+    " .sort_values(ascending = False))"
    ]
   },
   {
@@ -827,7 +835,8 @@
    ],
    "source": [
     "# Subsetting joined data\n",
-    "teilm021_022_concat_2 = teilm021_022_concat[['age', 'sex', 'geo', 'mean']]\n",
+    "teilm021_022_concat_2 = teilm021_022_concat[['age', 'sex', \n",
+    "                                             'geo', 'mean']]\n",
     "teilm021_022_concat_2.head()"
    ]
   },
@@ -1078,14 +1087,18 @@
     }
    ],
    "source": [
-    "teilm021_022_concat_5 = teilm021_022_concat_4.rename(columns = {'mean': 'unemployment'}).reset_index(drop = True)\n",
-    "teilm021_022_concat_5.head()"
+    "teilm021_022_concat_5 = (teilm021_022_concat_4\n",
+    "                         .rename(columns = {'mean': 'unemployment'})\n",
+    "                         .reset_index(drop = True)\n",
+    "teilm021_022_concat_5.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1368,8 +1381,13 @@
    ],
    "source": [
     "# Group by country\n",
-    "country_index = teilm021_022_concat_5.groupby('geo').mean()\n",
-    "country_index.sort_values('unemployment', ascending = False).reset_index().round()"
+    "country_index = (teilm021_022_concat_5\n",
+    "                 .groupby('geo')\n",
+    "                 .mean())\n",
+    "(country_index\n",
+    " .sort_values('unemployment', ascending = False)\n",
+    " .reset_index()\n",
+    " .round())"
    ]
   },
   {
@@ -1554,7 +1572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
