--- a/notebooks/correlation_check_gini.ipynb
+++ b/notebooks/correlation_check_gini.ipynb
@@ -28,6 +28,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -272,8 +273,10 @@
    ],
    "source": [
     "# Load dataset 'unemployment'\n",
-    "unemp = (pd.read_pickle(\"../data/pickles/total_unemployment_rate.pkl\")\n",
-    "           .reset_index())\n",
+    "unemp = (pd.read_pickle(os.path.join(BASE, \n",
+    "                                     \"pickles\", \n",
+    "                                     \"total_unemployment_rate.pkl\"))\n",
+    "         .reset_index())\n",
     "unemp.head()"
    ]
   },
@@ -971,7 +974,9 @@
    ],
    "source": [
     "# Load dataset 'gini coefficient'\n",
-    "gini = pd.read_csv(\"../data/pickles/ilc_di12.csv\")\n",
+    "gini = pd.read_csv(os.path.join(BASE,\n",
+    "                                \"pickles\", \n",
+    "                                \"ilc_di12.csv\"))\n",
     "gini.head()"
    ]
   },
@@ -2281,7 +2286,11 @@
    ],
    "source": [
     "# Join gini7 with unemp4\n",
-    "gini_unemp_comb = pd.merge(gini7, unemp4, how = 'inner', on = 'year').sort_values('year')\n",
+    "gini_unemp_comb = (pd.merge(gini7, \n",
+    "                            unemp4, \n",
+    "                            how = 'inner', \n",
+    "                            on = 'year')\n",
+    "                   .sort_values('year'))\n",
     "gini_unemp_comb"
    ]
   },
@@ -2298,7 +2307,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gini_unemp_comb.to_csv(os.path.join(BASE, \"output\", \"gini_unemp_comb.csv\"))"
+    "gini_unemp_comb.to_csv(os.path.join(BASE, \n",
+    "                                    \"output\", \n",
+    "                                    \"gini_unemp_comb.csv\"))"
    ]
   },
   {
@@ -3102,8 +3113,13 @@
    ],
    "source": [
     "# Ignore aggregate country names\n",
-    "unemp_new3 = unemp2[['year', 'AT', 'BE', 'BG', 'CH', 'CY', 'CZ', 'DE', 'DK', 'EE', 'EL', 'ES', 'FI', 'FR', 'HR', 'HU', 'IE',\n",
-    "       'IS', 'IT', 'LT', 'LU', 'LV', 'ME', 'MK', 'MT', 'NL', 'NO', 'PL', 'PT', 'RO', 'RS', 'SE', 'SI', 'SK', 'TR', 'UK']]\n",
+    "unemp_new3 = unemp2[['year', 'AT', 'BE', 'BG', 'CH', \n",
+    "                     'CY', 'CZ', 'DE', 'DK', 'EE', \n",
+    "                     'EL', 'ES', 'FI', 'FR', 'HR', \n",
+    "                     'HU', 'IE', 'IS', 'IT', 'LT', \n",
+    "                     'LU', 'LV', 'ME', 'MK', 'MT', \n",
+    "                     'NL', 'NO', 'PL', 'PT', 'RO', \n",
+    "                     'RS', 'SE', 'SI', 'SK', 'TR', 'UK']]\n",
     "unemp_new3.head()"
    ]
   },
@@ -3974,7 +3990,9 @@
    ],
    "source": [
     "# Transpose\n",
-    "gini_new5 = gini_new4.T.reset_index().rename(columns = {'index': 'year'})\n",
+    "gini_new5 = (gini_new4.T\n",
+    "             .reset_index()\n",
+    "             .rename(columns = {'index': 'year'}))\n",
     "gini_new5.head()"
    ]
   },
@@ -4204,7 +4222,12 @@
    ],
    "source": [
     "# Ignore aggregate country names\n",
-    "gini_new6 = gini_new5[['year','AT', 'BE', 'BG', 'CH', 'CY', 'CZ', 'DE', 'DK', 'EE', 'EL', 'ES', 'FI', 'FR', 'HR', 'HU', 'IE', 'IS', 'IT', 'LT', 'LU', 'LV', 'ME', 'MK', 'MT', 'NL',  'NO', 'PL', 'PT', 'RO', 'RS', 'SE', 'SI', 'SK', 'TR', 'UK']]\n",
+    "gini_new6 = gini_new5[['year','AT', 'BE', 'BG', 'CH', \n",
+    "                       'CY', 'CZ', 'DE', 'DK', 'EE', 'EL', \n",
+    "                       'ES', 'FI', 'FR', 'HR', 'HU', 'IE', \n",
+    "                       'IS', 'IT', 'LT', 'LU', 'LV', 'ME', \n",
+    "                       'MK', 'MT', 'NL',  'NO', 'PL', 'PT', \n",
+    "                       'RO', 'RS', 'SE', 'SI', 'SK', 'TR', 'UK']]\n",
     "gini_new6.head()"
    ]
   },
@@ -4688,8 +4711,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x2 = gini_new5[['AT', 'BE', 'BG', 'CH', 'CY', 'CZ', 'DE', 'DK', 'EE', 'EL', 'ES', 'FI', 'FR', 'HR', 'HU', 'IE', 'IS', 'IT', 'LT', 'LU', 'LV', 'ME', 'MK', 'MT', 'NL',  'NO', 'PL', 'PT', 'RO', 'RS', 'SE', 'SI', 'SK', 'TR', 'UK']]\n",
-    "y2 = unemp_new4[['AT', 'BE', 'BG', 'CH', 'CY', 'CZ', 'DE', 'DK', 'EE', 'EL', 'ES', 'FI', 'FR', 'HR', 'HU', 'IE', 'IS', 'IT', 'LT', 'LU', 'LV', 'ME', 'MK', 'MT', 'NL', 'NO', 'PL', 'PT', 'RO', 'RS', 'SE', 'SI', 'SK', 'TR', 'UK']]\n",
+    "x2 = gini_new5[['AT', 'BE', 'BG', 'CH', 'CY', 'CZ', 'DE', \n",
+    "                'DK', 'EE', 'EL', 'ES', 'FI', 'FR', 'HR', \n",
+    "                'HU', 'IE', 'IS', 'IT', 'LT', 'LU', 'LV', \n",
+    "                'ME', 'MK', 'MT', 'NL',  'NO', 'PL', 'PT', \n",
+    "                'RO', 'RS', 'SE', 'SI', 'SK', 'TR', 'UK']]\n",
+    "y2 = unemp_new4[['AT', 'BE', 'BG', 'CH', 'CY', 'CZ', 'DE', \n",
+    "                 'DK', 'EE', 'EL', 'ES', 'FI', 'FR', 'HR', \n",
+    "                 'HU', 'IE', 'IS', 'IT', 'LT', 'LU', 'LV', \n",
+    "                 'ME', 'MK', 'MT', 'NL', 'NO', 'PL', 'PT', \n",
+    "                 'RO', 'RS', 'SE', 'SI', 'SK', 'TR', 'UK']]\n",
     "X2 = sm.add_constant(x)"
    ]
   },
@@ -4822,8 +4853,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion**: Whether the mean of the GINI coefficient and the unemployment rate of the EU28 is taken, or each country is treated individually, makes no difference in the correlation coefficient and R squared in the OLS at hand. As above the analysis reveals that there is **no correlation** between the GINI coefficient and the unemployment rate. Since in multivariable regressions R squared adjusted rather than Rsquared is considered, this finding is confirmed by a **negative value**. "
+    "## Conclusion\n",
+    "Whether the mean of the GINI coefficient and the unemployment rate of the EU28 is taken, or each country is treated individually, makes no difference in the correlation coefficient and R squared in the OLS at hand. As above the analysis reveals that there is **no correlation** between the GINI coefficient and the unemployment rate. Since in multivariable regressions R squared adjusted rather than Rsquared is considered, this finding is confirmed by a **negative value**. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Further analysis\n",
+    "Later, we thought to ourselves it would be good to do further analysis with this, by running OLS regression on one country at a time for the full range of years. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -4843,7 +4890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
