--- a/notebooks/education_employment_rate_germany.ipynb
+++ b/notebooks/education_employment_rate_germany.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Unemployment by gender in Germany\n",
-    "We want to know what influence the gender has on the unemployment rate."
+    "We want to know what influence the gender has on the unemployment rate.\n",
+    "\n",
+    "## note!\n",
+    "After some time we realized our work was not valid. We only updated 'education_combined_data.ipynb'."
    ]
   },
   {
